# Spendly

./: .env.example  .gitignore  README.md  docker-compose.yml  package.json
.github/workflows/: ci.yml
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  router.py
backend/app/api/routes/: __init__.py  analytics.py  expenses.py  users.py  webhook.py
backend/app/core/: __init__.py  config.py
backend/app/db/: __init__.py  session.py
backend/app/models/: __init__.py  expense.py  user.py  webhook_event.py
backend/app/schemas/: __init__.py  analytics.py  expense.py  parser.py  receipt.py  user.py  webhook.py
backend/app/services/: __init__.py  analytics_service.py  expense_service.py  messenger_service.py  parser_service.py  receipt_service.py  user_service.py  webhook_service.py
backend/tests/: conftest.py  test_analytics_api.py  test_expenses_api.py  test_parser_service.py  test_receipt_service.py  test_webhook_api.py
frontend/: .env.example  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: category-chart.tsx  dashboard-header.tsx  dashboard-page.tsx  edit-expense-modal.tsx  icons.tsx  insights-panel.tsx  log-expense-modal.tsx  receipt-scan-modal.tsx  recent-transactions.tsx  spendly-sidebar.tsx  summary-cards.tsx  user-selector.tsx  workspace-sections.tsx
frontend/lib/: api.ts  dashboard.ts
scripts/: run-backend.mjs
